fixed styles for Close buttons (align with design)

--- a/Website/Composite/styles/default/controls.less
+++ b/Website/Composite/styles/default/controls.less
@@ -21,17 +21,17 @@ ui|control {
 
     ui|control[controltype="close"] {
         ui|labelbody {
-            padding-left: 16px !important;
 
             &:after {
                 content: '×';
                 position: absolute;
                 height: 100%;
                 width: 0px;
-                top: -6px;
+                top: -18px;
                 left: 8px;
                 color: @base-border-color;
-                font-size: 17px;
+                font-size: 20px;
+                font-weight: bold;
             }
         }
 
