--- a/Website/Composite/styles/default/toolbars/document-toolbar.less
+++ b/Website/Composite/styles/default/toolbars/document-toolbar.less
@@ -1,7 +1,7 @@
 ﻿.document-toolbar {
     padding: 0 10px 0 10px;
     position: relative;
-    top: 13px;
+    top: 15px;
     z-index: 4;
     margin-left: 50%;
 
